Configured Vite proxy to prevent CORS, when UI requests data from API in differet origin

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,14 @@
 #root {
   max-width: 1280px;
+  text-align: center;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+}
+
+*{
+  font-family: 'Inter', sans-serif;
+  background: #101010;
+  color: #cecece;
 }
 
 .logo {
